# YG-uninstaller

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_STATUS.md  README.md  build.py  git_push.bat
.cmake/: presets.json
include/core/: Common.h  Config.h  DetailedErrorCodes.h  ErrorHandler.h  Logger.h  ResidualItem.h
include/services/: DirectProgramScanner.h  ProgramCache.h  ProgramDetector.h  ResidualScanner.h  UninstallerService.h
include/ui/: CleanupDialog.h  MainWindow.h  MainWindowLogs.h  MainWindowSettings.h  MainWindowTray.h  ResourceManager.h
include/utils/: InputValidator.h  RegistryHelper.h  StringUtils.h  UIUtils.h
resources/: app.manifest  app.rc  resource.h  version.rc
src/: main.cpp
src/core/: Common.cpp  Config.cpp  DetailedErrorCodes.cpp  ErrorHandler.cpp  Logger.cpp
src/services/: DirectProgramScanner.cpp  ProgramCache.cpp  ProgramDetector.cpp  ResidualScanner.cpp  UninstallerService.cpp
src/ui/: CleanupDialog.cpp  MainWindow.cpp  MainWindowLogs.cpp  MainWindowSettings.cpp  MainWindowTray.cpp  ResourceManager.cpp
src/utils/: InputValidator.cpp  RegistryHelper.cpp  StringUtils.cpp  UIUtils.cpp
